--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Takenote</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" %>
+  <%= javascript_include_tag :defaults, "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
