--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -59,3 +59,34 @@ body{
   -webkit-box-shadow: 2px 2px 5px #ccc;
   box-shadow: 2px 2px 5px #ccc;
 }
+
+#nav {
+	width: 100%;
+	float: left;
+	margin: 0 0 0.7em 0;
+	padding: 0;
+	list-style: none;
+	background-color: #f2f2f2;
+	border-bottom: 1px solid #ccc; 
+	border-top: 1px solid #ccc; }
+#nav li {
+	float: left; }
+#nav li a {
+	display: block;
+	padding: 5px 15px  7px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc; }
+
+#search_field {
+	display: block;
+	padding: 4px 15px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc; }
+	
+#nav li a:hover {
+	color: #c00;
+	background-color: #fff; }
